# ru-share-media

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASES.md  ZEROTIER-QUICKREF.md  ZEROTIER.md  dnsmasq.conf  docker-compose.yml  install.sh  mkdocs.yml  start.sh
.github/workflows/: build.yml  release.yml
docs/: api.md  index.md
docs/configuration/: cors.md  env.md
docs/installation/: docker.md  releases.md  source.md
docs/zerotier/: docker.md  overview.md  quickref.md  systemd.md
migrations/: 001_initial.sql
scripts/: build-native-dietpi.sh  install.sh  ru-share-media.service  start.sh  test.sh  zerotier-dns-setup.sh  zerotier-setup.sh
src/: auth.rs  db.rs  dlna.rs  main.rs  models.rs  scanner.rs  transcode.rs
static/: app.js  index.html  style.css
