[package]
name = "ru-share-media"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "Netflix-style self-hosted media server with DLNA/UPnP support"
repository = "https://github.com/alphingj/ru-share-media"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "macros", "tokio"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "process"] }

# HTTP utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }

argon2 = { version = "0.5", features = ["password-hash"] }
password-hash = "0.5"

# Utilities
uuid = { version = "1.10", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.21"

# Media processing (ffprobe/ffplay via command line for Pi Zero compatibility)
image = { version = "0.25", features = ["jpeg", "png"] }  # Thumbnail generation

# Networking
reqwest = { version = "0.12", features = ["json", "stream"] }  # For external metadata APIs

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[features]
default = []
pi-zero = []  # Compile with optimizations for Pi Zero

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[target.armv6-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
rustflags = ["-C", "target-feature=+soft-float"]